[package]
name = "smart-ptr"
version = "0.4.0"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
description = "Alternative smart pointers for Rust"
readme = "README.md"
repository = "https://github.com/DoumanAsh/smart-ptr"
license = "BSL-1.0"
keywords = ["pointer", "ptr"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]

[dependencies]

[features]
alloc = []

[package.metadata.docs.rs]
features = ["alloc"]
